@@ -108,7 +108,8 @@ Mach msparc =
 	0,		/* value */
 	0x1000,		/* page size */
 	0xE0000000,	/* kernel base */
-	0,		/* kernel text mask */
+	0xE0000000,		/* kernel text mask */
+	0x7FFFFFFF,		/* user stack top */
 	4,		/* quantization of pc */
 	4,		/* szaddr */
 	4,		/* szreg */
